# NNC

./: CMakeLists.txt  README.md  build-debug.bat  build-release.bat  build-run.bat  compiler.h  defines.h  test.nnc
app/: CMakeLists.txt
app/src/: main.c
compiler/: CMakeLists.txt
compiler/include/util/: logger.h
compiler/src/: compiler.c
include/nnc/: file.h  lexer.h
include/util/: filesystem.h
src/: main.c
src/nnc/: file.c  lexer.c
src/nnc/utils/: string.c  vector.c
src/util/: filesystem.c
util/: logger.c
